--- a/samples/SqlServer.App/SqlServer.App.csproj
+++ b/samples/SqlServer.App/SqlServer.App.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Core\Core.csproj" />
+    <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
